--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "newapp",
+  "name": "AFPTcal",
   "version": "1.0.0",
   "description": "newApp: An Ionic project",
   "dependencies": {
